<resources>
    <string name="app_name">ToDoApp</string>
    <string name="login_subtitle">Your work faster and structured with Todo</string>
    <string name="login_title">Get Started now</string>
    <string name="login_txt_username">Username</string>
    <string name="login_edit_username">Enter your username</string>
    <string name="login_txt_password">Password</string>
    <string name="login_edit_password">Enter your password</string>
    <string name="login_edit_confirm_password">Enter your confirm password</string>
    <string name="login_btn_signIn">LogIn</string>
    <string name="register_title">Create account</string>
    <string name="register_subtitle">Create your account and feel the benefits</string>
    <string name="register_txt_confirm_password">Confirm password</string>
    <string name="register_btn_signup">Register</string>
</resources>