<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.dhanu.todo.viewModel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/txt_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/light_black"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_subtitle"
            android:textSize="14sp"
            android:textColor="@color/light_grey"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/txt_create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_username"
            android:textSize="16sp"
            android:textColor="@color/light_black"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@id/txt_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit_username"
            android:textColorHint="@color/grey"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edittext"
            android:padding="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/txt_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_password"
            android:textSize="16sp"
            android:textColor="@color/light_black"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@id/register_username"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit_password"
            android:textColorHint="@color/grey"
            android:inputType="textVisiblePassword"
            android:background="@drawable/rounded_edittext"
            android:padding="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/txt_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_txt_confirm_password"
            android:textSize="16sp"
            android:textColor="@color/light_black"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@id/register_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit_confirm_password"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:padding="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/txt_confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_btn_signup"
            android:textColor="@color/white"
            android:padding="20dp"
            android:fontFamily="sans-serif-medium"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
    <!--<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".RegisterActivity">

<TextView
    android:id="@+id/txt_create_account"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_title"
    android:textSize="24sp"
    android:textStyle="bold"
    android:textColor="@color/light_black"
    android:layout_marginTop="50dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<TextView
    android:id="@+id/txt_subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_subtitle"
    android:textSize="14sp"
    android:textColor="@color/light_grey"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@id/txt_create_account"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<TextView
    android:id="@+id/txt_username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_txt_username"
    android:textSize="16sp"
    android:textColor="@color/light_black"
    android:fontFamily="sans-serif-medium"
    app:layout_constraintTop_toBottomOf="@id/txt_subtitle"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="25dp"
    android:layout_marginTop="40dp"/>

<EditText
    android:id="@+id/register_username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/login_edit_username"
    android:textColorHint="@color/grey"
    android:inputType="textEmailAddress"
    android:background="@drawable/rounded_edittext"
    android:padding="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintTop_toBottomOf="@id/txt_username"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<TextView
    android:id="@+id/txt_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_txt_password"
    android:textSize="16sp"
    android:textColor="@color/light_black"
    android:fontFamily="sans-serif-medium"
    app:layout_constraintTop_toBottomOf="@id/register_username"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="25dp"
    android:layout_marginTop="20dp"/>

<EditText
    android:id="@+id/register_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/login_edit_password"
    android:textColorHint="@color/grey"
    android:inputType="textVisiblePassword"
    android:background="@drawable/rounded_edittext"
    android:padding="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintTop_toBottomOf="@id/txt_password"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<TextView
    android:id="@+id/txt_confirm_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_txt_confirm_password"
    android:textSize="16sp"
    android:textColor="@color/light_black"
    android:fontFamily="sans-serif-medium"
    app:layout_constraintTop_toBottomOf="@id/register_password"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="25dp"
    android:layout_marginTop="20dp"/>

<EditText
    android:id="@+id/register_confirm_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/login_edit_confirm_password"
    android:textColorHint="@color/grey"
    android:inputType="textPassword"
    android:background="@drawable/rounded_edittext"
    android:padding="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintTop_toBottomOf="@id/txt_confirm_password"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>


<Button
    android:id="@+id/btn_register"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/register_btn_signup"
    android:textColor="@color/white"
    android:padding="20dp"
    android:fontFamily="sans-serif-medium"
    android:background="@drawable/rounded_button"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>-->