<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.dhanu.todo.viewModel.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:src="@drawable/login_logo"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/light_black"
            app:layout_constraintTop_toBottomOf="@id/login_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textSize="14sp"
            android:textColor="@color/light_grey"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/txt_get_started"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_username"
            android:textSize="16sp"
            android:textColor="@color/light_black"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@id/txt_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit_username"
            android:textColorHint="@color/grey"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edittext"
            android:padding="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/txt_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_password"
            android:textSize="16sp"
            android:textColor="@color/light_black"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@id/login_username"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit_password"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:padding="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/txt_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget Password ?"
            android:textColor="@color/blue"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_signIn"
            android:textColor="@color/white"
            android:padding="20dp"
            android:fontFamily="sans-serif-medium"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="70dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="#6C7278"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



    <!--<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginActivity">

<ImageView
    android:id="@+id/login_logo"
    android:layout_width="68dp"
    android:layout_height="68dp"
    android:src="@drawable/login_logo"
    android:layout_marginTop="70dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/txt_get_started"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_title"
    android:textSize="26sp"
    android:textStyle="bold"
    android:textColor="@color/light_black"
    app:layout_constraintTop_toBottomOf="@id/login_logo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<TextView
    android:id="@+id/txt_subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_subtitle"
    android:textSize="14sp"
    android:textColor="@color/light_grey"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@id/txt_get_started"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<TextView
    android:id="@+id/txt_user_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_txt_username"
    android:textSize="16sp"
    android:textColor="@color/light_black"
    android:fontFamily="sans-serif-medium"
    app:layout_constraintTop_toBottomOf="@id/txt_subtitle"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="25dp"
    android:layout_marginTop="40dp"/>

<EditText
    android:id="@+id/login_username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/login_edit_username"
    android:textColorHint="@color/grey"
    android:inputType="textEmailAddress"
    android:background="@drawable/rounded_edittext"
    android:padding="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintTop_toBottomOf="@id/txt_user_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<TextView
    android:id="@+id/txt_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_txt_password"
    android:textSize="16sp"
    android:textColor="@color/light_black"
    android:fontFamily="sans-serif-medium"
    app:layout_constraintTop_toBottomOf="@id/login_username"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="25dp"
    android:layout_marginTop="20dp"/>

<EditText
    android:id="@+id/login_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/login_edit_password"
    android:textColorHint="@color/grey"
    android:inputType="textPassword"
    android:background="@drawable/rounded_edittext"
    android:padding="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintTop_toBottomOf="@id/txt_password"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Forget Password ?"
    android:textColor="@color/blue"
    android:textSize="13sp"
    android:textStyle="bold"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/login_password"/>

<Button
    android:id="@+id/btn_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/login_btn_signIn"
    android:textColor="@color/white"
    android:padding="20dp"
    android:fontFamily="sans-serif-medium"
    android:background="@drawable/rounded_button"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="70dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:gravity="center_horizontal"
    app:layout_constraintTop_toBottomOf="@id/btn_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        android:textColor="#6C7278"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textColor="@color/blue"
        android:textSize="13sp"
        android:textStyle="bold"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"/>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>-->